fix issue where logo disappears on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -725,6 +725,11 @@ body {
     .navigation__link.nobackground {
       background: none;
       border: none; }
+    .navigation__link.header__logo {
+      background: url("../img/bg_logo.png") no-repeat;
+      background-repeat: no-repeat;
+      background-size: 250px 57px;
+      border: none; }
   .navigation--highlight {
     background: inherit;
     padding: inherit;
